gitops/apps/actualbudget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  labels:
    app: actualbudget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: actualbudget
  template:
    metadata:
      labels:
        app: actualbudget
    spec:
      containers:
        - name: actualbudget
          image: actualbudget/actual-server:26.9.0
          ports:
            - containerPort: 5006
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actualbudget-data
