gitops/apps/actualbudget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
spec:
  selector:
    app: actualbudget
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
